--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -13,6 +13,7 @@ dependencies{
 	compile 'mysql:mysql-connector-java:5.1.30'
 	testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-simple:2.17'
 	testCompile 'javax.servlet:javax.servlet-api:3.1.0'
+	testCompile 'junit:junit:4.11'
 }
 
 sourceSets.all {
