--- a/backend/ant/build.xml
+++ b/backend/ant/build.xml
@@ -35,6 +35,7 @@
 		<junit haltonfailure="false" printsummary="true">
 			<classpath refid="classpath"></classpath>
 			<test name="ProductoTest" todir="reports"></test>
+			<test name="SQLConnectTest" todir="reports"></test>
 			<formatter type="xml"/>
 		</junit>
 	</target>
